# wasm-game-of-life-nojs

./: Cargo.toml  README.md  index.html
src/: lib.rs  universe.rs
