[package]
name = "wasm-game-of-life-nojs"
version = "0.1.0"
authors = ["Carsten Saathoff <carsten@kodemaniak.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'Node',
  'Window',
  'console',
]
